testing push to GitHub repo; redoing interpolation

--- a/Gaia Snail Plots.ipynb
+++ b/Gaia Snail Plots.ipynb
@@ -82,9 +82,7 @@
    "execution_count": 24,
    "id": "95dfad1a",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -114,25 +112,24 @@
     "\n",
     "def Omega_interm(J, Omega_small=1/np.sqrt(2)):\n",
     "    '''\n",
-    "    The \"intermediate\" expression for Omega: it's a cubic polynomial\n",
+    "    The \"intermediate\" expression for Omega: it's an\n",
     "    interpolation between the low-J and high-J regimes for Omega\n",
     "    (represented by Omega_small and Omega_big, respectively).\n",
     "    \n",
-    "    The polynomial is aJ^3 + bJ^2 + cJ + d. (The boundary conditions,\n",
-    "    algebra, etc. needed to get the coefficients are in my notes.)\n",
+    "    The interpolated function is ...\n",
     "    \n",
     "    '''\n",
     "    \n",
-    "    x_2 = 10*np.sqrt(2)*Omega_small # 10 times sigma*z_0; we assume that this is \n",
-    "                                    # the minimum J corresponding to J >> sigma*z_0\n",
-    "    y_2 = Omega_big(x_2)\n",
+    "#     x_2 = 10*np.sqrt(2)*Omega_small # 10 times sigma*z_0; we assume that this is \n",
+    "#                                     # the minimum J corresponding to J >> sigma*z_0\n",
+    "#     y_2 = Omega_big(x_2)\n",
     "    \n",
-    "    a = -2*(y_2 - Omega_small)/(x_2**3) + Omega_big_deriv(x_2)/(x_2**2)\n",
-    "    b = 3*(y_2 - Omega_small)/(x_2**2) - Omega_big_deriv(x_2)/x_2\n",
-    "    c = 0\n",
-    "    d = Omega_small\n",
+    "#     a = -2*(y_2 - Omega_small)/(x_2**3) + Omega_big_deriv(x_2)/(x_2**2)\n",
+    "#     b = 3*(y_2 - Omega_small)/(x_2**2) - Omega_big_deriv(x_2)/x_2\n",
+    "#     c = 0\n",
+    "#     d = Omega_small\n",
     "    \n",
-    "    return a*J**3 + b*J**2 + c*J + d\n",
+    "#     return a*J**3 + b*J**2 + c*J + d\n",
     "    \n",
     "\n",
     "def Omega(J):\n",
