edited Omega modules

--- a/Gaia Snail Plots.ipynb
+++ b/Gaia Snail Plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5109a1b9",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "95dfad1a",
    "metadata": {
     "code_folding": []
@@ -86,31 +86,26 @@
     "    coeff = (coeff / 3)**(1/3)\n",
     "    return coeff * J**(-1/3)\n",
     "\n",
-    "# def Omega_big_deriv(J, Omega_small=1/np.sqrt(2)):\n",
-    "#     '''\n",
-    "#     Derivative of the function Omega_big wrt J.\n",
-    "    \n",
-    "#     '''\n",
-    "    \n",
-    "#     coeff = (Omega_small**2 * np.pi)**2\n",
-    "#     coeff = (coeff / 3)**(1/3)\n",
-    "    \n",
-    "#     return coeff * (-1/3) * J**(-4/3)\n",
-    "\n",
-    "def Omega_interm(J, Omega_small=1/np.sqrt(2)):\n",
+    "def Omega(J, Omega_small=1/np.sqrt(2)):\n",
     "    '''\n",
-    "    The \"intermediate\" expression for Omega: it's an\n",
-    "    interpolation between the low-J and high-J regimes for Omega\n",
-    "    (represented by Omega_small and Omega_big, respectively).\n",
     "    \n",
+    "    Eq. 8 of Tremaine et al. (2023); orbital frequency.\n",
+    "    \n",
+    "    Here, we interpolate between the low-J and high-J regimes for Omega\n",
+    "    (represented by Omega_small and Omega_big, respectively).\n",
     "    The interpolated function has form a / (1 + b*J)^{1/3}. \n",
+    "    \n",
+    "    Refer to notes on notation and definitions (e.g., definition of Omega_small,\n",
+    "    normalizations of z_0 and Omega_small, values of a and b).\n",
     "    \n",
     "    '''\n",
     "    \n",
     "    # Omega=Omega_small for J=0\n",
     "    a = Omega_small\n",
+    "    \n",
     "    # coefficient in Omega_big expression\n",
     "    Omega_big_coeff = Omega_big(1, Omega_small) \n",
+    "    \n",
     "    # for large J, Omega_big ~ Omega_big_coeff * J^{-1/3} ~ a / (b*J)^{1/3},\n",
     "    # which implies b^(1/3) ~ a/Omega_big_coeff\n",
     "    b = (a / Omega_big_coeff)**3\n",
@@ -119,19 +114,6 @@
     "    denom = (1 + b*J)**(1/3)\n",
     "    return num / denom\n",
     "    \n",
-    "\n",
-    "def Omega(J):\n",
-    "    '''\n",
-    "    Eq. 8 of Tremaine et al. (2023); orbital frequency. Refer to notes on \n",
-    "    notation and definitions (e.g., definition of Omega_small, setting\n",
-    "    z_0 = 0).\n",
-    "    \n",
-    "    '''\n",
-    "    \n",
-    "    Omega_small = 1 / np.sqrt(2) # norm'd s.t. sigma*z_0=1\n",
-    "    \n",
-    "    return Omega_interm(J, Omega_small) \n",
-    "\n",
     "def dOmega_dJ(J, Omega_small=1/np.sqrt(2)):\n",
     "    '''\n",
     "    Derivative of Omega(J), assuming that Omega(J) = a / (1 + b*J)^{1/3}. . I got\n",
@@ -155,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "id": "3267039b",
    "metadata": {},
    "outputs": [
