fixed and double-checked Hamiltonian fn...

--- a/Gaia Snail Plots.ipynb
+++ b/Gaia Snail Plots.ipynb
@@ -695,14 +695,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "16bcb865",
    "metadata": {
     "code_folding": [
-     1,
-     27,
-     36,
-     45
+     25,
+     34,
+     43
     ]
    },
    "outputs": [],
@@ -714,7 +713,7 @@
     "    from 0 to J. (Underneath Eq. 8 in Scott's paper, it's stated that\n",
     "    Omega = dH/dJ.) We assume that Omega=0 for H=0.\n",
     "    \n",
-    "    Also, we use Omega = a/(1 + b*J^{1/3}). I got the form of the \n",
+    "    Also, we use Omega = a/(1 + b*J)^(1/3). I got the form of the \n",
     "    integral from Wolfram Alpha.\n",
     "    \n",
     "    \n",
@@ -722,17 +721,18 @@
     "    \n",
     "    # Omega=Omega_small for J=0\n",
     "    a = Omega_small \n",
+    "    \n",
     "    # coefficient in Omega_big expression\n",
     "    Omega_big_coeff = Omega_big(1, Omega_small) \n",
-    "    # for large J, Omega_big ~ Omega_big_coeff * J^{-1/3} ~ a/b * J^{-1/3}\n",
-    "    b = a / Omega_big_coeff\n",
     "    \n",
-    "    expr1 = b*J**(1/3) * (b*J**(1/3) - 2)\n",
-    "    expr2 = 2*np.log(b*J**(1/3) + 1)\n",
-    "    numerator = 3*a*(expr1 + expr2)\n",
-    "    denominator = 2 * b**3\n",
+    "    # for large J, Omega_big ~ Omega_big_coeff * J^{-1/3} ~ a / (b*J)^{1/3},\n",
+    "    # which implies b^(1/3) ~ a/Omega_big_coeff\n",
+    "    b = (a / Omega_big_coeff)**3\n",
     "    \n",
-    "    return numerator/denominator\n",
+    "    coeff = 3 * a / (2*b)\n",
+    "    expr = (1 + b*J)**(2/3)\n",
+    "    \n",
+    "    return coeff * expr\n",
     "\n",
     "def f_0(J): \n",
     "    '''\n",
