galactic pm+echo notebook

--- a/Gaia Snail Plots.ipynb
+++ b/Gaia Snail Plots.ipynb
@@ -69,9 +69,7 @@
    "execution_count": 2,
    "id": "95dfad1a",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
