implemented drawing from f_0

--- a/Galactic Phase Mixing and Echo.ipynb
+++ b/Galactic Phase Mixing and Echo.ipynb
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd48f055",
+   "id": "f6cd2edd",
    "metadata": {},
    "source": [
     "## $f$ definitions"
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a7f4d183",
+   "id": "b724a028",
    "metadata": {
     "code_folding": [
      0,
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8bdaa028",
+   "id": "7ff42ff3",
    "metadata": {
     "code_folding": []
    },
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1052ddd6",
+   "id": "8aaba506",
    "metadata": {},
    "source": [
     "## plot $\\delta f/f_0$ in $z,v_z$ space"
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "b755a992",
+   "id": "42b9d610",
    "metadata": {
     "scrolled": true
    },
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "9a5fc657",
+   "id": "71d9d9ba",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -768,8 +768,8 @@
     "                   shading='auto')\n",
     "fig.colorbar(quad1, ax=ax, extend='both')\n",
     "\n",
-    "ax.set_xlabel(r\"$\\theta$\")\n",
-    "ax.set_ylabel(r\"$J$\")\n",
+    "ax.set_xlabel(r\"$\\sqrt{J}$ cos($\\theta$)\")\n",
+    "ax.set_ylabel(r\"$\\sqrt{J}$ sin($\\theta$)\")\n",
     "\n",
     "# the overdensity at theta=0 as a function of time; ie, delta_n(theta=0, t)\n",
     "delta_n_array = []\n",
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "6a55c589",
+   "id": "2776ee50",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "2a1d0696",
+   "id": "510e5784",
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb5c9b5c",
+   "id": "bfc16af6",
    "metadata": {},
    "outputs": [],
    "source": []
