edited coord vonersion nb

--- a/Coordinate Conversion.ipynb
+++ b/Coordinate Conversion.ipynb
@@ -10,9 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "a3ae243a",
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [],
    "source": [
     "# import packages\n",
@@ -48,33 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9c9a64a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11013.232920103323"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.cosh(-10)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 27,
    "id": "5555f645",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -153,13 +134,59 @@
    "id": "903d49ad",
    "metadata": {},
    "source": [
-    "We'll have to invert J(E) from the previous step."
+    "We'll use root finding to interpolate the inverse of $J(E)$—which we derived in the previous step—and get $J(E)$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04039192",
+   "id": "f988b3c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e153132b",
+   "metadata": {},
+   "source": [
+    "# Step 3: Find $z$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aec088d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f1c7d13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3b1473b",
+   "metadata": {},
+   "source": [
+    "# Step 4: Find $v_z$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f69cea5",
+   "metadata": {},
+   "source": [
+    "We'll plug in $E(J)$ and $z$ into $v_z = \\pm \\sqrt{2(E-\\Phi(z))}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c833791",
    "metadata": {},
    "outputs": [],
    "source": []
