--- a/Coordinate Conversion.ipynb
+++ b/Coordinate Conversion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "a3ae243a",
    "metadata": {
     "code_folding": []
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5555f645",
    "metadata": {
     "code_folding": []
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "87d38951",
    "metadata": {
     "scrolled": true
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f988b3c8",
    "metadata": {},
    "outputs": [],
@@ -188,12 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 250,
    "id": "6f1c7d13",
    "metadata": {
-    "code_folding": [
-     1
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -221,11 +219,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 251,
    "id": "e994e749",
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     4,
+     33,
+     46,
+     63,
+     81
+    ]
+   },
    "outputs": [],
    "source": [
+    "## define find_z and corresponding four implicit equations\n",
+    "\n",
+    "epsabs=1e-6\n",
+    "\n",
     "def find_z(theta, J):\n",
     "    '''\n",
     "    Set up an implicit equation whose root (z=z_root) we want to find,\n",
@@ -235,11 +245,25 @@
     "    \n",
     "    z_max = 2 * np.arccosh( np.exp(E_J(J)/2) )\n",
     "    \n",
+    "    ## should play around with brackets, tolerances\n",
     "    if (theta < np.pi/2):\n",
     "        sol = optimize.root_scalar(z_equation_quadrant1, args=(theta, J), \\\n",
-    "                                   bracket=[-z_max, z_max]) \n",
+    "                                   bracket=[0, z_max*(1-1e-8)]) \n",
     "        return sol.root\n",
-    "    \n",
+    "    elif (theta < np.pi):\n",
+    "        sol = optimize.root_scalar(z_equation_quadrant2, args=(theta, J), \\\n",
+    "                                   bracket=[0, z_max*(1-1e-8)]) \n",
+    "        return sol.root\n",
+    "    elif (theta < 3*np.pi/2):\n",
+    "        sol = optimize.root_scalar(z_equation_quadrant3, args=(theta, J), \\\n",
+    "                                   bracket=[-z_max*(1-1e-8), 0]) \n",
+    "        return sol.root\n",
+    "    elif (theta < 2*np.pi):\n",
+    "        sol = optimize.root_scalar(z_equation_quadrant4, args=(theta, J), \\\n",
+    "                                   bracket=[-z_max*(1-1e-8), 0]) \n",
+    "        return sol.root\n",
+    "    else:\n",
+    "        raise ValueError('theta must be less than 2pi')\n",
     "    \n",
     "def z_equation_quadrant1(z, theta, J):\n",
     "    '''\n",
@@ -247,9 +271,12 @@
     "    \n",
     "    '''\n",
     "    E = E_J(J) # using step 2, calculate E(J)\n",
-    "    print(\"z:\", z)\n",
+    "    #print(\"z:\", z)\n",
     "    \n",
-    "    return integrate.quad(one_over_v_z_positive, 0, z, args=(E))[0] - theta/Omega(J)\n",
+    "    # should play around epsabs since we don't want the coordinate conversion to fail \n",
+    "    # near |z| ~ z_max\n",
+    "    return integrate.quad(one_over_v_z_positive, 0, z, args=(E), epsabs=epsabs)[0] \\\n",
+    "        - theta/Omega(J)\n",
     "\n",
     "def z_equation_quadrant2(z, theta, J):\n",
     "    '''\n",
@@ -261,58 +288,53 @@
     "    z_max = 2 * np.arccosh(np.exp(E/2))\n",
     "    \n",
     "    # integral for one-fourth of the orbit\n",
-    "    I_quarter_orbit = integrate.quad(one_over_v_z_positive, 0, z_max, args=(E))[0]\n",
+    "    I_quarter_orbit = integrate.quad(one_over_v_z_positive, 0, z_max, args=(E), \\\n",
+    "                                     epsabs=epsabs)[0]\n",
     "    \n",
     "    return I_quarter_orbit + \\\n",
-    "            integrate.quad(one_over_v_z_positive, z, z_max, args=(E))[0] - theta/Omega(J)"
+    "            integrate.quad(one_over_v_z_positive, z, z_max, args=(E), epsabs=epsabs)[0] \\\n",
+    "        - theta/Omega(J)\n",
+    "\n",
+    "def z_equation_quadrant3(z, theta, J):\n",
+    "    '''\n",
+    "    The implicit equation for z in Quadrant 3.\n",
+    "    \n",
+    "    '''\n",
+    "    E = E_J(J) # using step 2, calculate E(J)\n",
+    "    \n",
+    "    z_max = 2 * np.arccosh(np.exp(E/2))\n",
+    "    \n",
+    "    # integral for one-fourth of the orbit\n",
+    "    I_quarter_orbit = integrate.quad(one_over_v_z_positive, 0, z_max, args=(E), \\\n",
+    "                                     epsabs=epsabs)[0]\n",
+    "    \n",
+    "    return 2*I_quarter_orbit + \\\n",
+    "            integrate.quad(one_over_v_z_positive, z, 0, args=(E), epsabs=epsabs)[0] \\\n",
+    "        - theta/Omega(J)\n",
+    "\n",
+    "\n",
+    "def z_equation_quadrant4(z, theta, J):\n",
+    "    '''\n",
+    "    The implicit equation for z in Quadrant 4.\n",
+    "    \n",
+    "    '''\n",
+    "    E = E_J(J) # using step 2, calculate E(J)\n",
+    "    \n",
+    "    z_max = 2 * np.arccosh(np.exp(E/2))\n",
+    "    \n",
+    "    # integral for one-fourth of the orbit\n",
+    "    I_quarter_orbit = integrate.quad(one_over_v_z_positive, 0, z_max, args=(E), \\\n",
+    "                                     epsabs=epsabs)[0]\n",
+    "    \n",
+    "    return 3*I_quarter_orbit + \\\n",
+    "            integrate.quad(one_over_v_z_positive, -z_max, z, args=(E), epsabs=epsabs)[0] \\\n",
+    "        - theta/Omega(J)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "5b222ecb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.018394434391093638"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sqrt(.001) * np.cos(.95)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "4f328f8a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.533780364176491"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z_max = 2 * np.arccosh( np.exp(E_J(.1)/2) )\n",
-    "z_max"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 252,
    "id": "2f801a92",
    "metadata": {
     "scrolled": true
@@ -322,8 +344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "z: -0.528442560534726\n",
-      "z: 0.528442560534726\n"
+      "Quadrant 1 tests passed\n"
      ]
     },
     {
@@ -333,8 +354,8 @@
      "traceback": [
       "\u001b[0;31m------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-80-6a9c5269ae56>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfind_z\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1.55\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-73-6d89cd8db200>\u001b[0m in \u001b[0;36mfind_z\u001b[0;34m(theta, J)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtheta\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         sol = optimize.root_scalar(z_equation_quadrant1, args=(theta, J), \\\n\u001b[0m\u001b[1;32m     12\u001b[0m                                    bracket=[-z_max*.99, z_max*.99]) \n\u001b[1;32m     13\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-252-bd0a2917c878>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Quadrant 2 boundary tests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mfind_z\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mfind_z\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mfind_z\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-251-c7265fb927fd>\u001b[0m in \u001b[0;36mfind_z\u001b[0;34m(theta, J)\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtheta\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         sol = optimize.root_scalar(z_equation_quadrant2, args=(theta, J), \\\n\u001b[0m\u001b[1;32m     21\u001b[0m                                    bracket=[0, z_max*(1-1e-8)]) \n\u001b[1;32m     22\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/scipy/optimize/_root_scalar.py\u001b[0m in \u001b[0;36mroot_scalar\u001b[0;34m(f, args, method, bracket, fprime, fprime2, x0, x1, xtol, rtol, maxiter, options)\u001b[0m\n\u001b[1;32m    247\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    248\u001b[0m         \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbracket\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 249\u001b[0;31m         \u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msol\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmethodc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    250\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mmeth\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'secant'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    251\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mx0\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/scipy/optimize/zeros.py\u001b[0m in \u001b[0;36mbrentq\u001b[0;34m(f, a, b, args, xtol, rtol, maxiter, full_output, disp)\u001b[0m\n\u001b[1;32m    774\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mrtol\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0m_rtol\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    775\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"rtol too small (%g < %g)\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_rtol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 776\u001b[0;31m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_zeros\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_brentq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxiter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfull_output\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    777\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresults_c\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfull_output\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    778\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: f(a) and f(b) must have different signs"
@@ -342,7 +363,46 @@
     }
    ],
    "source": [
-    "find_z(1.55, 0.1)"
+    "# Quadrant 1 boundary tests\n",
+    "find_z(1e-6, 0.1)\n",
+    "find_z(1e-6, 20)\n",
+    "find_z(np.pi/4, 0.1)\n",
+    "find_z(np.pi/4, 20)\n",
+    "find_z(np.pi/2 * (1-1e-2), 0.1)\n",
+    "#find_z(np.pi/2 * (1-1e-2), 20) # generates error since z_root isn't in (0,z_max)\n",
+    "\n",
+    "print(\"Quadrant 1 tests passed\")\n",
+    "\n",
+    "# Quadrant 2 boundary tests\n",
+    "find_z(np.pi/2 * (1+1e-6), 0.1)\n",
+    "find_z(np.pi/2 * (1+1e-6), 20)\n",
+    "find_z(3*np.pi/4, 0.1)\n",
+    "find_z(3*np.pi/4, 20)\n",
+    "find_z(np.pi * (1-1e-2), 0.1)\n",
+    "# find_z(np.pi * (1-1e-2), 20) # generates error since z_root isn't in (0,z_max)\n",
+    "\n",
+    "print(\"Quadrant 2 tests passed\")\n",
+    "\n",
+    "# Quadrant 3 boundary tests\n",
+    "find_z(np.pi * (1+1e-6), 0.1)\n",
+    "find_z(np.pi * (1+1e-6), 20)\n",
+    "find_z(5*np.pi/4, 0.1)\n",
+    "find_z(5*np.pi/4, 20)\n",
+    "find_z(3*np.pi/2 * (1-1e-2), 0.1)\n",
+    "# find_z(3*np.pi/2 * (1-1e-2), 20) # generates error since z_root isn't in (-z_max,0)\n",
+    "\n",
+    "print(\"Quadrant 3 tests passed\")\n",
+    "\n",
+    "# Quadrant 4 boundary tests\n",
+    "find_z(3*np.pi/2 * (1+1e-6), 0.1)\n",
+    "find_z(3*np.pi/2 * (1+1e-6), 20)\n",
+    "find_z(7*np.pi/4, 0.1)\n",
+    "find_z(7*np.pi/4, 20)\n",
+    "find_z(2*np.pi * (1-1e-2), 0.1)\n",
+    "find_z(2*np.pi * (1-1e-3), 20) # generates error since z_root isn't in (-z_max,0)\n",
+    "\n",
+    "print(\"Quadrant 4 tests passed\")\n",
+    "\n"
    ]
   },
   {
@@ -363,21 +423,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 249,
    "id": "3788960a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5031687951068671\n",
-      "2.4101178023059253\n"
+      "5.524138336790668e-05\n",
+      "2.435968790093614\n"
      ]
     }
    ],
    "source": [
-    "theta_temp = 0.1\n",
+    "theta_temp = 2.96761\n",
     "J_temp = 5\n",
     "z_temp = find_z(theta_temp, J_temp)\n",
     "E_temp = E_J(J_temp)\n",
