made Omega accurate, mosst tests passed for step 3

--- a/Coordinate Conversion.ipynb
+++ b/Coordinate Conversion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 255,
    "id": "a3ae243a",
    "metadata": {
     "code_folding": []
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 256,
    "id": "5555f645",
    "metadata": {
     "code_folding": []
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 257,
    "id": "87d38951",
    "metadata": {
     "scrolled": true
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 258,
    "id": "f988b3c8",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 259,
    "id": "6f1c7d13",
    "metadata": {
     "code_folding": []
@@ -201,33 +201,31 @@
     "    \n",
     "    Eq. 8 of Tremaine et al. (2023); orbital frequency.\n",
     "    \n",
-    "    Here, we interpolate between the low-J and high-J regimes for Omega.\n",
-    "    The interpolated function has form a / (1 + b*J)^{1/3}. \n",
-    "    \n",
-    "    In this function, J is dimensionless. J=1 corresponds to sigma*z_0 in\n",
-    "    physical units.\n",
+    "    NOTE: Unlike in my other notebooks, rather than use an analytical form\n",
+    "    of Omega, I'll do the integral numerically.\n",
     "    \n",
     "    '''\n",
     "    \n",
-    "    a = 1 / np.sqrt(2)\n",
-    "    b = 3*np.sqrt(2) / (np.pi**2)\n",
+    "    E = E_J(J) # using step 2, calculate E(J)\n",
     "    \n",
-    "    num = a\n",
-    "    denom = (1 + b*J)**(1/3)\n",
-    "    return num / denom"
+    "    z_max = 2 * np.arccosh(np.exp(E/2))\n",
+    "    \n",
+    "    # integral for one-fourth of the orbit\n",
+    "    I_quarter_orbit = integrate.quad(one_over_v_z_positive, 0, z_max, args=(E), \\\n",
+    "                                     epsabs=epsabs)[0]\n",
+    "    \n",
+    "    I_full_orbit = 4*I_quarter_orbit\n",
+    "    \n",
+    "    return 2*np.pi / I_full_orbit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 267,
    "id": "e994e749",
    "metadata": {
     "code_folding": [
-     4,
-     33,
-     46,
-     63,
-     81
+     33
     ]
    },
    "outputs": [],
@@ -334,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 313,
    "id": "2f801a92",
    "metadata": {
     "scrolled": true
@@ -344,65 +342,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quadrant 1 tests passed\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "f(a) and f(b) must have different signs",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-252-bd0a2917c878>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Quadrant 2 boundary tests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mfind_z\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mfind_z\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mfind_z\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-251-c7265fb927fd>\u001b[0m in \u001b[0;36mfind_z\u001b[0;34m(theta, J)\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtheta\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         sol = optimize.root_scalar(z_equation_quadrant2, args=(theta, J), \\\n\u001b[0m\u001b[1;32m     21\u001b[0m                                    bracket=[0, z_max*(1-1e-8)]) \n\u001b[1;32m     22\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/scipy/optimize/_root_scalar.py\u001b[0m in \u001b[0;36mroot_scalar\u001b[0;34m(f, args, method, bracket, fprime, fprime2, x0, x1, xtol, rtol, maxiter, options)\u001b[0m\n\u001b[1;32m    247\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    248\u001b[0m         \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbracket\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 249\u001b[0;31m         \u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msol\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmethodc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    250\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mmeth\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'secant'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    251\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mx0\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/scipy/optimize/zeros.py\u001b[0m in \u001b[0;36mbrentq\u001b[0;34m(f, a, b, args, xtol, rtol, maxiter, full_output, disp)\u001b[0m\n\u001b[1;32m    774\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mrtol\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0m_rtol\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    775\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"rtol too small (%g < %g)\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_rtol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 776\u001b[0;31m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_zeros\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_brentq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxiter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfull_output\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    777\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresults_c\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfull_output\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    778\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: f(a) and f(b) must have different signs"
+      "Quadrant 1 tests passed\n",
+      "Quadrant 2 tests passed\n",
+      "Quadrant 3 tests passed\n",
+      "Quadrant 4 tests passed\n"
      ]
     }
    ],
    "source": [
     "# Quadrant 1 boundary tests\n",
-    "find_z(1e-6, 0.1)\n",
-    "find_z(1e-6, 20)\n",
+    "find_z(1e-8, 0.1)\n",
+    "find_z(1e-8, 20)\n",
     "find_z(np.pi/4, 0.1)\n",
     "find_z(np.pi/4, 20)\n",
-    "find_z(np.pi/2 * (1-1e-2), 0.1)\n",
-    "#find_z(np.pi/2 * (1-1e-2), 20) # generates error since z_root isn't in (0,z_max)\n",
+    "find_z(np.pi/2 * (1-1e-3), 0.1) # roundoff error for 1-1e-4, but still works\n",
+    "find_z(np.pi/2 * (1-1e-3), 20) # roundoff error for 1-1e-4, but still works\n",
     "\n",
     "print(\"Quadrant 1 tests passed\")\n",
     "\n",
     "# Quadrant 2 boundary tests\n",
-    "find_z(np.pi/2 * (1+1e-6), 0.1)\n",
-    "find_z(np.pi/2 * (1+1e-6), 20)\n",
+    "find_z(np.pi/2 * (1+1e-4), 0.1) # breaks for 1+1e-5\n",
+    "find_z(np.pi/2 * (1+1e-4), 20) # breaks for 1+1e-5\n",
     "find_z(3*np.pi/4, 0.1)\n",
     "find_z(3*np.pi/4, 20)\n",
-    "find_z(np.pi * (1-1e-2), 0.1)\n",
-    "# find_z(np.pi * (1-1e-2), 20) # generates error since z_root isn't in (0,z_max)\n",
+    "find_z(np.pi * (1-1e-8), 0.1)\n",
+    "find_z(np.pi * (1-1e-8), 20)\n",
     "\n",
     "print(\"Quadrant 2 tests passed\")\n",
     "\n",
     "# Quadrant 3 boundary tests\n",
-    "find_z(np.pi * (1+1e-6), 0.1)\n",
-    "find_z(np.pi * (1+1e-6), 20)\n",
+    "find_z(np.pi * (1+1e-8), 0.1)\n",
+    "find_z(np.pi * (1+1e-8), 20)\n",
     "find_z(5*np.pi/4, 0.1)\n",
     "find_z(5*np.pi/4, 20)\n",
-    "find_z(3*np.pi/2 * (1-1e-2), 0.1)\n",
-    "# find_z(3*np.pi/2 * (1-1e-2), 20) # generates error since z_root isn't in (-z_max,0)\n",
+    "find_z(3*np.pi/2 * (1-1e-8), 0.1)\n",
+    "find_z(3*np.pi/2 * (1-1e-8), 20)\n",
     "\n",
     "print(\"Quadrant 3 tests passed\")\n",
     "\n",
     "# Quadrant 4 boundary tests\n",
-    "find_z(3*np.pi/2 * (1+1e-6), 0.1)\n",
-    "find_z(3*np.pi/2 * (1+1e-6), 20)\n",
+    "find_z(3*np.pi/2 * (1+1e-4), 0.1) # breaks for 1+1e-5\n",
+    "find_z(3*np.pi/2 * (1+1e-4), 20) # breaks for 1+1e-5\n",
     "find_z(7*np.pi/4, 0.1)\n",
     "find_z(7*np.pi/4, 20)\n",
-    "find_z(2*np.pi * (1-1e-2), 0.1)\n",
-    "find_z(2*np.pi * (1-1e-3), 20) # generates error since z_root isn't in (-z_max,0)\n",
+    "find_z(2*np.pi * (1-1e-8), 0.1)\n",
+    "find_z(2*np.pi * (1-1e-8), 20)\n",
     "\n",
-    "print(\"Quadrant 4 tests passed\")\n",
-    "\n"
+    "print(\"Quadrant 4 tests passed\")"
    ]
   },
   {
@@ -423,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 316,
    "id": "3788960a",
    "metadata": {
     "scrolled": true
@@ -433,8 +419,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.524138336790668e-05\n",
-      "2.435968790093614\n"
+      "0.8220262433980985\n",
+      "2.367527261114408\n"
      ]
     }
    ],
@@ -449,9 +435,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80327f7d",
+   "metadata": {},
+   "source": [
+    "# Define overall coordinate conversion function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9802d3c",
+   "id": "ae2d9fb1",
    "metadata": {},
    "outputs": [],
    "source": []
