did timing test for ccoord conversion

--- a/Coordinate Conversion.ipynb
+++ b/Coordinate Conversion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 1,
    "id": "a3ae243a",
    "metadata": {
     "code_folding": []
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 2,
    "id": "5555f645",
    "metadata": {
     "code_folding": []
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 3,
    "id": "87d38951",
    "metadata": {
     "scrolled": true
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 4,
    "id": "f988b3c8",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 5,
    "id": "6f1c7d13",
    "metadata": {
     "code_folding": []
@@ -221,11 +221,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 6,
    "id": "e994e749",
    "metadata": {
     "code_folding": [
-     33
+     0,
+     33,
+     46
     ]
    },
    "outputs": [],
@@ -332,7 +334,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 59,
+   "id": "66eb9ce8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79.71127827962239"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## doing timing tests + exploring integrating in different directions\n",
+    "J = 20\n",
+    "E = E_J(J) # using step 2, calculate E(J)\n",
+    "    \n",
+    "z_max = 2 * np.arccosh(np.exp(E/2))\n",
+    "\n",
+    "epsabs=1e-6\n",
+    "\n",
+    "start = time.time()\n",
+    "integrate.quad(one_over_v_z_positive, 0, .5*z_max, args=(E), \\\n",
+    "                                     epsabs=epsabs)[0]\n",
+    "# doing 200*1e5 integrals is too long\n",
+    "(time.time()-start)*1e5*200 / 60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "2f801a92",
    "metadata": {
     "scrolled": true
